src/z80asm/z80asm2/t/40-syntax/expected/defs_numeric_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/defs_numeric_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/defs_numeric_01.asm...
t/40-syntax/input/defs_numeric_01.asm:1:5: error: Expression expected
    defs
        ^
t/40-syntax/input/defs_numeric_01.asm:2:1: error: Unterminated expression after "defs"
    defs ,
    ^
t/40-syntax/input/defs_numeric_01.asm:3:9: error: Unexpected token: ","
    defs 1,2,
            ^
Program: defs_numeric_01
    Modules:
        Module: defs_numeric_01 (current)
            Sections:
                Section:  (current)
    Statements:
        DefsNumericStmt
            Location: t/40-syntax/input/defs_numeric_01.asm:4:1
            Size:
                ExprBinary: +
                    Location: t/40-syntax/input/defs_numeric_01.asm:4:8
                    Value type: Unknown
                    Tokens: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/defs_numeric_01.asm:4:6
                            Value type: Unknown
                            Tokens: 
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/defs_numeric_01.asm:4:10
                            Value type: Unknown
                            Tokens: 
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/defs_numeric_01.asm:4:8
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/defs_numeric_01.asm:4:10
                                    Value type: Unknown
                                    Tokens: 
            Filler byte:
                ExprLiteralInt: 0
                    Location: t/40-syntax/input/defs_numeric_01.asm:4:1
                    Value type: Unknown
                    Tokens: 
        DefsNumericStmt
            Location: t/40-syntax/input/defs_numeric_01.asm:5:1
            Size:
                ExprBinary: +
                    Location: t/40-syntax/input/defs_numeric_01.asm:5:8
                    Value type: Unknown
                    Tokens: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/defs_numeric_01.asm:5:6
                            Value type: Unknown
                            Tokens: 
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/defs_numeric_01.asm:5:10
                            Value type: Unknown
                            Tokens: 
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/defs_numeric_01.asm:5:8
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/defs_numeric_01.asm:5:10
                                    Value type: Unknown
                                    Tokens: 
            Filler byte:
                ExprBinary: +
                    Location: t/40-syntax/input/defs_numeric_01.asm:5:15
                    Value type: Unknown
                    Tokens: 2+3*4
                    LHS:
                        ExprLiteralInt: 2
                            Location: t/40-syntax/input/defs_numeric_01.asm:5:13
                            Value type: Unknown
                            Tokens: 
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/defs_numeric_01.asm:5:17
                            Value type: Unknown
                            Tokens: 
                            LHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/defs_numeric_01.asm:5:15
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprLiteralInt: 4
                                    Location: t/40-syntax/input/defs_numeric_01.asm:5:17
                                    Value type: Unknown
                                    Tokens: 
